--- a/UsefulCsharpCommonsUtils.csproj
+++ b/UsefulCsharpCommonsUtils.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assembly.cs" />
     <Compile Include="cli\argsparser\CliParser.cs" />
     <Compile Include="cli\argsparser\exceptions\CliParserInitException.cs" />
     <Compile Include="cli\argsparser\CliParserLangRef.cs" />
