--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="lang\CommonsStringUtilsTests.cs" />
+    <Compile Include="lang\Test\CommonsStringUtilsTests.cs" />
     <Compile Include="lang\LangUtilsTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,6 +64,7 @@
       <Name>UsefulCsharpCommonsUtils</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
